# domain-chip-memory

./: .env.example  .gitignore  .gitleaks.toml  AGENTS.md  CLAUDE.md  CONTRADICTIONS.md  PROJECT.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  chip_skill.md  evaluate_chip.py  pyproject.toml  requirements.txt  score_history.jsonl  spark-chip.json  spark-chip.json.sha256  spark-researcher.project.json  spark.toml  tasks.md
.opengrep/: domain-chip-memory-security.yml
artifacts/: memory_system_strategy_packet.json  watchtower_summary.json
docs/: AI_MEMORY_RESEARCH_BASE_2026-03-22.md  ANSWER_CANDIDATE_PRECEDENCE_RULE_2026-03-26.md  ARCHITECTURE.md  ARCHITECTURE_VARIATION_LOOP_2026-03-29.md  AUTOLOOP_FLYWHEEL.md  BEAM_128K_CLEANUP_REPORT_2026-04-09.md  BEAM_IMPLEMENTATION_GAP_MAP_2026-03-29.md  BEAM_JUDGED_HANDOFF_2026-04-04.md  BEAM_LOCAL_PILOT_SLICE_2026-03-25.md  BEAM_OFFICIAL_128K_BLOCKER_2026-03-29.md  BEAM_OFFICIAL_REPRODUCTION_PLAN_2026-03-29.md  BEAM_READINESS_PROGRAM_2026-03-24.md  BENCHMARK_AUTOLOOP_PROGRAM.md  BENCHMARK_STRATEGY.md  BENCHMARK_SUBSTRATE_CONTRACTS.md  COMBINATION_SEARCH_PROGRAM.md  COMPREHENSIVE_IMPLEMENTATION_PLAN_2026-04-08.md  CONVERSATIONAL_MEMORY_LAYER_PLAN_2026-04-22.md  CURRENT_STATUS_BENCHMARKS_AND_KB_2026-04-08.md  CURRENT_STATUS_BENCHMARKS_AND_KB_2026-04-09.md  CURRENT_TEST_AND_VALIDATION_PLAN_2026-03-29.md  EXECUTION_PROGRAM_AND_PRD_GAP_2026-03-22.md  FIRST_VERSION_RESEARCH_LOCK.md  FRONTIER_MEMORY_SYSTEMS_COMPARATIVE_ANALYSIS_2026-03-22.md  FRONTIER_STATUS_2026-03-28.md  GRAPHITI_ADOPTION_RECORD_2026-04-29.md  (+64 more)
research/: README.md
(+848 files in other folders)
