[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "domain-chip-memory"
version = "0.1.0"
description = "Benchmark-first Spark domain chip scaffold for agent memory systems."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
graphiti-kuzu = ["graphiti-core[kuzu]>=0.28.2"]
graphiti-neo4j = ["graphiti-core>=0.28.2"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
